	  now works when surfraw is not installed (but you need to have
	  run make).
	* test/Makefile.am: fix bookfinder typo, add bing.test.
	* remove leading 'sr ' from command lines for following tests:
	    acronym aur bing cliki gcache genportage google javasun l1sp
	    lsm mathworld mininova piratebay youtube
	* HACKING, README, test/README: document autotools and test
	  suite changes.

2010-02-22  Ivy Foster  <joyfulgirl@archlinux.us>

	* Added `-ns|-newscreen' switch for setting $SURFRAW_new_screen.

2010-02-15  James Rowe  <jnrowe@gmail.com>

	* elvi/imdb: Fixes for upstream search changes.  Thanks to Sadako.
	* New elvi: bookfinder, thanks to Ivy Foster.

2010-02-14  James Rowe  <jnrowe@gmail.com>

	* Added $SURFRAW_screen_args for passing arguments to the defined screen
	  tool, thanks to Ivy Foster.
	* Support for using tmux as $SURFRAW_screen, thanks once again to Ivy
	  Foster.
	* New elvi: bugmenot, thanks to Ivy Foster.

2010-02-05  Ian Beckwith  <ianb@erislabs.net>

	* Added options for 'aur' elvi.
	  Patch from Ivy Foster.

2010-02-02  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: bing, thanks to tczy.
	  Elvi number One Hundred!!!1!

2010-01-26  James Rowe  <jnrowe@gmail.com>

	* elvi/bbcnews: Fixes for upstreams search changes. Based on a patch by
	  Sumant Oemrawsingh.

2010-01-06  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.1.IN: document new config locations.

2009-11-20  Ian Beckwith  <ianb@erislabs.net>

	* test/Makefile.am: Add missing tests to EXTRA_DIST.

2009-11-13  Ian Beckwith  <ianb@erislabs.net>

	* freebsd: new options -psearch=TYPE -psection=SEC
	  to conduct a search of type TYPE in section SEC of ports.
	* netbsd:  new option -ps to search ports
	* openbsd: new option -ps to search ports
	* URLs for *bsd portsearch, finkpkg, macports and rpmsearch
	  from whohas(1), http://www.philippwesche.org/200811/whohas/intro.html
	* cia, pubmed: fixed tests.

2009-11-12  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: